# liquidplan

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/hook-adapters/: Cargo.toml  README.md
crates/hook-adapters/src/: lib.rs  orca.rs  raydium.rs
crates/hook-runtime/: Cargo.toml  README.md
crates/hook-runtime/src/: lib.rs  registry.rs
crates/hook-runtime/src/builtin/: anti_mev.rs  dynamic_fee.rs  kyc_gate.rs  mod.rs  range_order.rs  time_lock.rs  whitelist_gate.rs
docs/: architecture.md  cli-quickstart.md  hooks-spec.md  security.md  token-economics.md
programs/liquidplan-hook-executor/: Anchor.toml  Cargo.toml  README.md
programs/liquidplan-hook-executor/src/: error.rs  lib.rs  state.rs
programs/liquidplan-hook-executor/src/adapters/: mod.rs  orca.rs  raydium.rs
programs/liquidplan-hook-executor/src/hooks/: anti_mev.rs  dynamic_fee.rs  kyc_gate.rs  mod.rs  range_order.rs  time_lock.rs  whitelist_gate.rs
